--- a/src/assets/css/tencent.css
+++ b/src/assets/css/tencent.css
@@ -1,5 +1,5 @@
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, button, input, textarea, th, td {margin: 0;padding: 0}
-body {color:#515a6e;font-size: 12px;font-style: normal;font-family:tahoma,arial,Avenir,Helvetica,Arial,sans-serif;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale;}
+body {color:#515a6e;font-style: normal;font-family:tahoma,arial,Avenir,Helvetica,Arial,sans-serif;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale;}
 ul, ol {list-style: none}
 a {text-decoration: none;background-color: transparent}
 a:hover, a:active {outline-width: 0;text-decoration: none}
@@ -32,3 +32,6 @@ button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focus
 ::-webkit-input-placeholder {color: inherit;opacity: .54}
 ::-webkit-file-upload-button {-webkit-appearance: button;font: inherit}
 .clearfix:after {display: block;height: 0;content: "";clear: both}
+::-webkit-scrollbar {width: 5px;height: 5px;background-color: #eee;}
+::-webkit-scrollbar-track {border-radius: 10px;background-color: #eee;}
+::-webkit-scrollbar-thumb {border-radius: 10px;background-color: #2474b5;}
